pdf service add image